--- a/src/app/DetailWithDate/detail-with-date/detail-with-date.component.scss
+++ b/src/app/DetailWithDate/detail-with-date/detail-with-date.component.scss
@@ -8,7 +8,7 @@ h1{
 }
 #cases{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 .tc{
   color: slateblue;
@@ -27,18 +27,23 @@ tr{
 .bt{
   margin-left: 120px;
 }
-button{
-  margin-left: 10px;
+.th{
+  padding-left: 120px;
 }
-.detail{
+.date{
+  //background-color: slateblue;
+  color: slateblue;
+  border: 2px solid black;
+  border-radius: 12px;
+  font-size: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.back{
+  font-size: 16px;
   background-color: slateblue;
   color: white;
   border-radius: 12px;
-  font-size: 10px;
-}
-.item{
-  color: slateblue;
-  background-color: white;
-  border-radius: 8px;
-  font-size: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
