--- a/src/app/city/city/city.component.scss
+++ b/src/app/city/city/city.component.scss
@@ -27,3 +27,11 @@ tr{
 .bt{
   margin-left: 120px;
 }
+.back{
+  font-size: 16px;
+  background-color: slateblue;
+  color: white;
+  border-radius: 12px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
