--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,7 @@ h1{
 tr{
   display: flex;
   justify-content: space-around;
-  margin: 10px;
+  position: relative;
 }
 .bt{
   margin-left: 120px;
@@ -75,4 +75,23 @@ nav{
   padding-left: 15px;
   padding-right: 15px;
   height: 40px;
+}
+.row1{
+  position: absolute;
+  left: 120px;
+}
+.row2{
+  position: absolute;
+  left: 510px;
+}
+.row3{
+  position: absolute;
+  left: 880px;
+}
+.row4{
+  position: absolute;
+  left: 1290px;
+}
+tr{
+  margin-top: 35px;
 }
