--- a/src/app/DetailWithDate/detail-with-date/detail-with-date.component.scss
+++ b/src/app/DetailWithDate/detail-with-date/detail-with-date.component.scss
@@ -77,3 +77,10 @@ tr{
 tr{
   margin-top: 35px;
 }
+.not-found{
+  display: flex;
+  justify-content: center;
+  color: red;
+  font-size: 20px;
+}
+
